# horde-workspace

./: .pre-commit-config.yaml  README.md  pyproject.toml
horde_workspace/: data.py  utils.py  workspace.py
horde_workspace/classes/: embedding.py  job.py  lora.py  model.py  resolutions.py
horde_workspace/data/embeddings/: FastNegative.yaml
horde_workspace/data/loras/: Detail Tweaker XL.yaml  Faithful 32px seamless blocks v1.yaml  Faithful 32px seamless blocks v2.yaml
horde_workspace/data/models/: AlbedoBase XL.yaml  Anything Diffusion.yaml  Deliberate.yaml  Dreamshaper XL.yaml  Dreamshaper.yaml  Flux Schnell.yaml  Fustercluck.yaml  ICBINP XL.yaml  ICBINP.yaml  Juggernaut XL.yaml  Pony Diffusion XL.yaml  SDXL 1.0.yaml  Stable Cascade 1.0.yaml  stable_diffusion.yaml
horde_workspace/gui/: clipboard.py  main.py
horde_workspace/processors/: __init__.py  alchemist.py  caption.py  generate.py  pixelize.py
scripts/: main.py  pixelart.py
